# orgdigestor

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
orgdigestor/: api_urls.py  api_views.py  apps.py  celery.py  models.py  serializers.py  tasks.py
orgdigestor/migrations/: 0001_initial.py  0002_alter_country_name_alter_industry_slug_and_more.py
